--- a/en-GB.mod_casebmanager.sys.ini
+++ b/en-GB.mod_casebmanager.sys.ini
@@ -2,5 +2,5 @@
 ; @license		GNU General Public License version 2 or later; see LICENSE.txt
 
 
-MOD_CASEBMANAGER="casebmanager CA SebManager"
+MOD_CASEBMANAGER="Frontend Seblod Content Manager"
 
